--- a/index.html
+++ b/index.html
@@ -1,21 +1,53 @@
-<html>
-    <head>
-        <title>
-            Olá, eu sou a cabeça
-        </title>
-    </head>
-    <bory>
-        <h1>h1 Eu sou o corpo</h1>
-        <h2>h2 Eu sou o corpo</h2>
-    </bory>
-    <ol>
-        <li>Cafe</li>
-        <li>Cha</li>
-        <li>Leite</li>
-    </ol>
-    <ul>
-        <li>Cafe</li>
-        <li>Cha</li>
-        <li>Leite</li>
-    </ul>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Suellen</title>
+
+    <link rel="stylesheet" href="style.css">
+
+</head>
+<body>
+    <main class="resume-contents">
+        <section class="left-section">
+            <section class="left-section-content">
+                <div class="profile">
+                    <img class="profile-image" src="img/profile-image.jpeg" alt="Profile image">
+                    <p class="name">Suellen</p>
+                    <p class="profession">Desenvolvedora Back-end</p>
+                </div>
+                <div class="contact-info">
+                    <p class="left-title">Contato</p>
+                    <ul>
+                        <li><i class="fa fa-phone"></i>+55 22 99999-9999</li>
+                        <li><i class="fa fa-envelope"></i>sss123@gmail.com</li>
+                        <li><i class="fa fa-globe"></i>www.sss123.com</li>
+                        <li><i class="fa fa-github"></i>sssss111</li>
+                    </ul>            
+                </div>
+                <div class="skills">
+                    <p class="left-title">Skills</p>
+                    <ul>
+                        <li><p>HTML, CSS, Git & GitHub</p></li>
+                        <li><p>Linux</p></li>
+                    </ul>
+                </div>              
+            </section>
+            </section>
+            <section class="right-section">
+                <div class="right-section-contents">
+                    <section class="about gap">
+                        <div class="right-title">Sobre Mim</div>
+                        <p class="about-me-contents">
+                            Olá sou a Suellen.<br>
+                            <br> Um pouco mais sobre o que faço 
+                            <br>Quais são minhas competências                          
+                        </p>
+                    </section>
+                </div>         
+            </section>   
+    </main>
+</body>
 </html>
