feature: add index.html and style.css (#4)

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +10,7 @@
     <link rel="stylesheet" href="style.css">
 
 </head>
+
 <body>
     <main class="resume-contents">
         <section class="left-section">
@@ -25,54 +27,84 @@
                         <li><i class="fa fa-envelope"></i>sss123@gmail.com</li>
                         <li><i class="fa fa-globe"></i>www.sss123.com</li>
                         <li><i class="fa fa-github"></i>sssss111</li>
-                    </ul>            
+                    </ul>
                 </div>
                 <div class="skills">
                     <p class="left-title">Skills</p>
                     <ul>
-                        <li><p>HTML, CSS, Git & GitHub</p></li>
-                        <li><p>Linux</p></li>
+                        <li>
+                            <p>HTML, CSS, Git & GitHub</p>
+                        </li>
+                        <li>
+                            <p>Linux</p>
+                        </li>
                     </ul>
-                </div>              
+                </div>
             </section>
-            </section>
-            <section class="right-section">
-                <div class="right-section-contents">
-                    <section class="about gap">
-                        <div class="right-title">Sobre Mim</div>
-                        <p class="about-me-contents">
-                            Olá sou a Suellen.<br>
-                            <br> Um pouco mais sobre o que faço 
-                            <br>Quais são minhas competências                          
-                        </p>
-                    </section>
-                </div> 
+        </section>
+        <section class="right-section">
+            <div class="right-section-contents">
+                <section class="about gap">
+                    <div class="right-title">Sobre Mim</div>
+                    <p class="about-me-contents">
+                        Olá sou a Suellen.<br>
+                        <br> Um pouco mais sobre o que faço
+                        <br>Quais são minhas competências
+                    </p>
+                </section>
+            </div>
             <section class="experience gap">
                 <div class="right-title">Experiência</div>
                 <div class="experience-contents">
                     <div class="exp-left">
                         <p class="exp-company-name">Empresa 01</p>
                         <p class="exp-time-period">2021-Present</p>
+                    </div>
+                    <div class="exp-right">
+                        <p class="exp-position">Desenvolvedora Back-end</p>
+                        <p class="exp-desc">
+                            Descreva aqui as principais atividades da empresa 01
+                        </p>
+                    </div>
+                    <div class="exp-left">
+                        <p class="exp-company-name">Empresa 02</p>
+                        <p class="exp-time-period">2017-2021</p>
+                    </div>
+                    <div class="exp-right">
+                        <p class="exp-position">Desenvolvedora Back-end</p>
+                        <p class="exp-desc">
+                            Descreva aqui as principais atividades da empresa 02
+                        </p>
+                    </div>
                 </div>
-                <div class="exp-right">
-                    <p class="exp-position">Desenvolvedora Back-end</p>
-                    <p class="exp-desc">
-                       Descreva aqui as principais atividades da empresa 01
-                    </p>
-                </div>
-                <div class="exp-left">
-                    <p class="exp-company-name">Empresa 02</p>
-                    <p class="exp-time-period">2017-2021</p>
-            </div>
-            <div class="exp-right">
-                <p class="exp-position">Desenvolvedora Back-end</p>
-                <p class="exp-desc">
-                   Descreva aqui as principais atividades da empresa 02
-                </p>
-            </div>
-            </div> 
-        </section>
+            </section>
+            <section class="education gap">
+                <div class="right-title">Formação Acadêmica</div>
+                <div class="education-contents">
+                    <div class="education-left">
+                        <p class="education-school-name">UFRJ</p>
+                        <p class="education-time-period">2022-2024</p>                
+                    </div>
+                    <div class="education-right">
+                        <p class="education-subject">Análise e Desenvolvimento de Sistemas</p>
+                        <p class="education-desc">
+                            Pós graduação em Análise de Dados
+                        </p>
+                    </div>
+                    <div class="education-left">
+                        <p class="education-school-name">UERJ</p>
+                        <p class="education-time-period">2015-2019</p>                
+                    </div>
+                    <div class="education-right">
+                        <p class="education-subject">Gestão de Pessoas</p>
+                        <p class="education-desc">
+                            Graduação em Gesão de Pessoas
+                        </p>
+                    </div>
+                </div> 
+            </section>
         </section>   
     </main>
 </body>
+
 </html>
