feature: add index.html

--- a/index.html
+++ b/index.html
@@ -98,13 +98,37 @@
                     <div class="education-right">
                         <p class="education-subject">Gestão de Pessoas</p>
                         <p class="education-desc">
-                            Graduação em Gesão de Pessoas
+                            Graduação em Gestão de Pessoas
                         </p>
                     </div>
                 </div> 
             </section>
+            <section class="awards gap">
+                <div class="right-title">Cursos</div>
+                <div class="awards-contents">
+                    <div class="awards-left">
+                        <p class="awards-company-name">EBAC</p>
+                        <p class="awards-time-period">06.2018</p>
+                    </div>
+                    <div class="awards-right">
+                        <p class="awards-name">Curso de UX</p>
+                        <p class="awards-desc">
+                            Curso feito na EBAC no ano de 2015 
+                        </p>
+                    </div>
+                    <div class="awards-left">
+                        <p class="awards-company-name">Elastic</p>
+                        <p class="awards-time-period">06.2019</p>
+                    </div>
+                    <div class="awards-right">
+                        <p class="awards-name">Curso de Analise de Dados</p>
+                        <p class="awards-desc">
+                            Curso feito na EBAC no ano de 2020 
+                        </p>
+                    </div>                                    
+                </div>
+            </section>
         </section>   
     </main>
 </body>
-
 </html>
