feature: add index.html

--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
                         </p>
                     </div>
                     <div class="awards-left">
-                        <p class="awards-company-name">Elastic</p>
+                        <p class="awards-company-name">EBAC</p>
                         <p class="awards-time-period">06.2019</p>
                     </div>
                     <div class="awards-right">
-                        <p class="awards-name">Curso de Analise de Dados</p>
+                        <p class="awards-name">Curso de Análise de Dados</p>
                         <p class="awards-desc">
                             Curso feito na EBAC no ano de 2020 
                         </p>
